[tool.poetry]
name = "baserow-node-ip-management"
version = "0.1.0"
description = ""
authors = ["Moritz Makowski <moritz@dostuffthatmatters.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
